@@ -1,6 +1,6 @@
-@comment $NetBSD: PLIST,v 1.7 2002/11/30 14:04:01 grant Exp $
+@comment $NetBSD: PLIST,v 1.8 2002/12/15 19:41:26 cjep Exp $
 bin/bison
-@unexec ${INSTALL_INFO} --delete %D/info/bison.info %D/info/dir
+@unexec ${INSTALL_INFO} --delete --info-dir=%D/info %D/info/bison.info
 info/bison.info
 info/bison.info-1
 info/bison.info-2
@@ -8,20 +8,13 @@ info/bison.info-3
 info/bison.info-4
 info/bison.info-5
 info/bison.info-6
-@comment from libiconv: lib/charset.alias
-@exec ${INSTALL_INFO} %D/info/bison.info %D/info/dir
+@exec ${INSTALL_INFO} --info-dir=%D/info %D/info/bison.info
 man/man1/bison.1
-share/bison/bison.simple
-share/bison/bison.hairy
-${PKGLOCALEDIR}/locale/locale.alias
-${PKGLOCALEDIR}/locale/de/LC_MESSAGES/bison.mo
-${PKGLOCALEDIR}/locale/es/LC_MESSAGES/bison.mo
-${PKGLOCALEDIR}/locale/fr/LC_MESSAGES/bison.mo
-${PKGLOCALEDIR}/locale/nl/LC_MESSAGES/bison.mo
-${PKGLOCALEDIR}/locale/sv/LC_MESSAGES/bison.mo
-${PKGLOCALEDIR}/locale/ja/LC_MESSAGES/bison.mo
-${PKGLOCALEDIR}/locale/ru/LC_MESSAGES/bison.mo
-${PKGLOCALEDIR}/locale/it/LC_MESSAGES/bison.mo
-${PKGLOCALEDIR}/locale/et/LC_MESSAGES/bison.mo
-${PKGLOCALEDIR}/locale/tr/LC_MESSAGES/bison.mo
+share/bison/c.m4
+share/bison/glr.c
+share/bison/lalr1.cc
+share/bison/m4sugar/m4sugar.m4
+share/bison/m4sugar/version.m4
+share/bison/yacc.c
+@dirrm share/bison/m4sugar
 @dirrm share/bison
